--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     color: deeppink;
-    background-color: pink, gray;
+    background-color: pink;
 }
 
 h1 {
