--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,11 +2,11 @@ body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
     color: deeppink;
-    background-color: pink;
+    background-color: white;
 }
 
 h1 {
-    color: chartreuse;
+    color: black;
 }
 
 a {
